@@ -75,6 +75,7 @@ This feature was developed by Aman Pandey as part of the Google Summer of Code p
  * Purge revisions of non-page models in `purge_revisions` command (Sage Abdullah)
  * Change the default WebP quality to 80 to match AVIF (Aman Pandey)
  * Adopt optimised Wagtail logo in the admin interface (Albina Starykova)
+* Add support for presenting the userbar (Wagtail button) in dark mode (Albina Starykova)
 
 ### Bug fixes
 
